crates/weft-snapshots/tests/snapshots/html/example-tab.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-tab as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Account</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="root" aria-label="Account">
  <div>
    <div data-weft-id="account-tabs" role="tablist">
      <button data-weft-id="tab-profile" type="button" role="tab" id="weft-tab-profile-tab" aria-selected="true" aria-controls="weft-tab-profile-panel">Profile</button>
    </div>
    <div role="tabpanel" id="weft-tab-profile-panel" aria-labelledby="weft-tab-profile-tab">
      <div data-weft-field>
        <label><span aria-hidden="true">Display name</span><input data-weft-id="name" aria-label="Display name" type="text" data-bind="value:$.name"></label>
      </div>
    </div>
  </div>
</main>
</body>
</html>
