crates/weft-snapshots/tests/snapshots/html/example-table.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-table as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Orders</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
.weft-field label, .weft-toggle { display: flex; gap: 0.5em; }
.weft-field label { flex-direction: column; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="root" aria-label="Orders">
  <table data-weft-id="orders" aria-label="Recent orders" data-state="ready">
    <thead>
      <tr>
        <th data-weft-id="col-id" scope="col">Order</th>
        <th data-weft-id="col-total" scope="col" aria-sort="descending" data-action="press:orders.sort">Total</th>
      </tr>
    </thead>
    <tbody>
      <template data-weft-id="order-each" data-each="$.orders" data-as="order">
        <tr data-weft-id="order-row" aria-selected="false">
          <td data-weft-id="order-id">
            <p data-weft-id="order-id-text" data-bind="text:$order.id"></p>
          </td>
          <td data-weft-id="order-total">
            <p data-weft-id="order-total-text" data-bind="text:$order.total"></p>
          </td>
        </tr>
      </template>
      <template data-empty>
        <p data-weft-id="orders-empty">No orders yet.</p>
        <button data-weft-id="orders-shop" type="button" data-action="press:nav.shop">Start shopping</button>
      </template>
    </tbody>
  </table>
</main>
</body>
</html>
